--- a/DualClassVoting/DualClassVoting/DualClassVoting.csproj
+++ b/DualClassVoting/DualClassVoting/DualClassVoting.csproj
@@ -64,8 +64,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Syncfusion.Maui.Charts" Version="21.2.8" />
-	  <PackageReference Include="Syncfusion.Maui.Core" Version="21.2.8" />
+	  <PackageReference Include="Syncfusion.Maui.Charts" Version="*" />
+	  <PackageReference Include="Syncfusion.Maui.Core" Version="*" />
 	</ItemGroup>
 
 </Project>
